<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.alexpop.resizerlib.app.main.MainActivity">

    <item
        android:id="@+id/action_compress_pictures"
        android:orderInCategory="100"
        android:title="@string/action_compress"
        android:icon="@drawable/ic_archive_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_clear_pictures"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh_pictures"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_set_attributes"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="always" />
</menu>
