<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.example.alexpop.resizerlib.app.viewModels.ResizeSettingsDialogViewModel" />

        <variable
            name="clickHandlers"
            type="com.example.alexpop.resizerlib.app.dialogs.DialogButtonCallbacks" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding_medium"
                android:text="@string/compression_ration" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="2"
                android:text="@={viewModel.compressionRatio}"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding_medium"
                android:text="@string/maximum_resize_height" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:text="@={viewModel.maxHeight}"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:orientation="horizontal">

            <Button
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="@{()-> clickHandlers.onButtonSaveClicked()}"
                android:text="@string/label_dialog_btn_save" />


            <Button
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="@{()-> clickHandlers.onButtonCancelClicked()}"
                android:text="@string/label_dialog_btn_cancel" />

        </LinearLayout>

    </LinearLayout>

</layout>